# DerDieDas

./: .gitignore  .pre-commit-config.yaml  License.md  README.md  __init__.py  derdiedas.db  pyproject.toml
data/: Linie1_A1-1_Kapitelwortschatz.docx  Linie1_A1-2_Kapitelwortschatz1.docx  chapter1_8.csv  nouns_extracted_chapter1_8_google_translated_py_trans.csv
src/der_die_das/: DerDieDasApp.kv  __init__.py  database.py  db.py  db_fill_data.py  derdiedas.kv  derdiedas.py  main.py  models.py  utils.py
src/der_die_das/data/: all_chapters.csv
src/der_die_das/database/: database.py  db_fill_data.py  db_instance.py
src/der_die_das/german/: db_fill_data.py  extract_data_from_book.py  extract_nouns_from_book_docx.py  models.py
src/der_die_das/screens/: main_menu_screen.py  noun_games_screen.py  settings_screen.py  stats_screen.py
src/der_die_das/screens/noun_games/: __init__.py  base_screen.py  gender_screen.py  plural_screen.py  translate_screen.py
src/der_die_das/screens/stats/: __init__.py  base_screen.py  gender_screen.py  plural_screen.py  stats_screen.py  translation_screen.py
