[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "der_die_das"
version = "0.1.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies=[
  "kivy[full]",
  "gtts",
  "sqlalchemy",
  "PyPDF2",
  "python-docx",
  "py-trans",
  "aiofiles",
]
